# redstring

./: .gitignore  AGENTS.md  PLANS.md  README.md  badge_events.csv  generate_hospital_areas.py  generate_hospital_badging_events.py  osint_posts.csv  scenario_manifest.json  suspicious_person_reports.csv
.github/: pull_request_template.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  evaluation_engine.py  event_signal.py  main.py  raw_event_store.py  schemas.py  state_store.py
backend/app/api/: __init__.py  routes.py
backend/app/correlation/: engine.py
backend/app/domain/: __init__.py  case_engine.py  text_templates.py
backend/app/fixtures/: loader.py
backend/app/models/: alert.py  event.py
backend/app/routes/: alerts.py  events.py  simulate.py
backend/app/store/: memory.py
backend/data/: demo_events.sqlite3
backend/tests/: test_api_demo_flow.py  test_case_flow.py  test_osint_disabled.py
data_gen/: dcpolicedept_last_20_posts.csv  generate_badge_events.py  generate_suspicious_person_reports_csv.py  hospital_badge_events_24h.csv  post_badge_events_csv.py  post_dcpolicedept_posts_csv.py  post_suspicious_person_reports_csv.py  suspicious_person_reports.csv  suspicious_person_reports_24h.csv
data_generation/: generate_hospital_badging_events.py  generate_hospital_doors.py  generate_hospital_staff_csv.py  post_badge_events_csv.py  scrape_x_posts_to_csv.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
mvp_build_demo_markdown_pack_v3/: README.md  acceptance_criteria.md  demo_contract.md  (+9 more)
(+23 files in other folders)
